--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -344,6 +344,19 @@
         "save": "กดที่ภาพค้างไว้เพื่อบันทึก",
         "share_to": "แบ่งปันไปที่",
         "code": "รหัสการเชิญ",
-        "enter_code": "ใส่รหัสเชิญ"
+        "enter_code": "ใส่รหัสเชิญ",
+        "share_1":"ชวนเพื่อนรับรายได้",
+        "share_2":"เงินด้วยกัน",
+        "share_3":"แบ่งปันสูงสุดกับเพื่อน ๆ",
+        "share_4":"ส่วนลดค่าคอมมิชชั่น",
+        "recom":"คำแนะนำของฉัน",
+        "share_after":"หลังจากชาร์จใหม่ คุณจะได้รับ:",
+        "commission":"ค่าคอมมิชชั่นเชิญ",
+        "share_5":"ทุกคำแนะนำที่ประสบความสำเร็จของเพื่อน",
+        "share_6":"เพลิดเพลินกับผลตอบแทนค่าคอมมิชชั่นหลายระดับ",
+        "share_earn":"รับเหรียญกับเพื่อน ๆ",
+        "copy_code":"คัดลอกรหัส",
+        "copy_link":"คัดลอกลิงค์",
+        "rank_remark":"อันดับของคุณใน 24 ชั่วโมงแรก"
     }
 }
