--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -75,7 +75,7 @@
         "detail": "Подробная информация",
         "inv_link": "Ссылка на приглашение",
         "click_login": "Нажмите, чтобы войти в систему",
-        "welcome": "Добро пожаловать в BiBi",
+        "welcome": "Добро пожаловать в {{value}}",
         "mine_en": "Мой поручитель ",
         "safe_set": "Настройки безопасности",
         "people": "Люди",
