--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -75,7 +75,7 @@
         "detail": "รายละเอียดข้อมูล",
         "inv_link": "ลิงค์เชิญ",
         "click_login": "คลิกเพื่อเข้าสู่ระบบ",
-        "welcome": "ยินดีต้อนรับสู่ BIBI",
+        "welcome": "ยินดีต้อนรับสู่ {{value}}",
         "mine_en": "มอบหมายของฉัน",
         "safe_set": "ตั้งค่าความปลอดภัย",
         "people": "คน",
