--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -280,7 +280,8 @@
         "need_read":"Я прочитал и согласен с ",
         "protocol":"Политика конфиденциальности",
         "experience":"Золотой опыт",
-        "experience_order":"Опыт Золотого Ордена"
+        "experience_order":"Опыт Золотого Ордена",
+        "select_cs":"Выберите обслуживание клиентов"
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
