--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -280,7 +280,8 @@
         "need_read":"ฉันได้อ่านและยอมรับ ",
         "protocol":"นโยบายความเป็นส่วนตัว",
         "experience":"ประสบการณ์ทอง",
-        "experience_order":"สัมผัสประสบการณ์สั่งทอง"
+        "experience_order":"สัมผัสประสบการณ์สั่งทอง",
+        "select_cs":"เลือกบริการลูกค้า"
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
