renew activity-th

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,16 +8,16 @@
         "forget": "Forget Password",
         "email": "Email",
         "enter_email": "Enter the email address",
-        "enter_phone":"Enter the mobile number",
-        "select_code":"Select area code",
-        "banner_th":"Easily buy and sell and manage your digital assets.",
-        "banner_th_title":"Full-featured one-click trading platform",
-        "mail":"Mail",
-        "phone":"Phone",
-        "select_area":"Select area",
-        "email_or_phone":"Email address or mobile number",
-        "enter_email_phone":"Enter email address or mobile number",
-        "mobile_number":"Mobile number",
+        "enter_phone": "Enter the mobile number",
+        "select_code": "Select area code",
+        "banner_th": "Easily buy and sell and manage your digital assets.",
+        "banner_th_title": "Full-featured one-click trading platform",
+        "mail": "Mail",
+        "phone": "Phone",
+        "select_area": "Select area",
+        "email_or_phone": "Email address or mobile number",
+        "enter_email_phone": "Enter email address or mobile number",
+        "mobile_number": "Mobile number",
         "email_code": "Verification code",
         "enter_code": "Enter the verification code",
         "send_code": "Send",
@@ -33,17 +33,17 @@
         "customer": "CS",
         "set": "Setting",
         "help": "Help",
-        "home_help":"HELP",
+        "home_help": "HELP",
         "help_more": "QUS/GUID/INFO",
         "ann": "Announcement",
-        "home_ann":"ANNCMNT",
+        "home_ann": "ANNCMNT",
         "ann_more": "News/E/INFO",
         "assets": "Assets",
         "assets_total_un": "Total assests about",
         "for_u": "around ",
         "up_list": "Increase",
         "vol": "Trading rebate",
-        "vol_inv":"Invitation bonus",
+        "vol_inv": "Invitation bonus",
         "login_pass": "Login password",
         "enter_login_pass": "Enter the login password",
         "login": "Login",
@@ -237,51 +237,57 @@
         "has_no_address": "No address yet",
         "hint": "Hint",
         "has_no_data": "No data",
-        "inv_title":"Invitation rebate",
-        "id":"ID",
-        "no_content":"No content yet",
-        "recharge_fait":"Fiat currency recharge",
-        "recharge_protocol":"On-chain recharge",
-        "recharge_amount":"Recharge amount",
-        "type_recharge_amount":"Enter the recharge amount",
-        "recharge_fait_remark":"Reminder:Please contact online customer service after payment",
-        "next":"Next step",
-        "reject":"Rejected",
-        "pay_away":"Payment method",
-        "limit_50":"Minimum deposit amount 50 USDT",
-        "fait_withdraw":"Fiat Withdrawal",
-        "protocol_withdraw":"Withdrawal on the chain",
-        "bank_num":"Bank card number",
-        "use_bank":"Available channels",
-        "enter_bank_num":"Enter the bank card number/account",
-        "min_50":"Minimum 50",
-        "back_home":"Back homepage",
-        "guide_title":"How to quickly access BIBI on iOS",
-        "guide_1":"Open the safari browser, enter '{{value}}' and visit, select the menu at the bottom of the browser (marked in red) and go to the next step",
-        "guide_2":"After the menu pops up, select 'add to home screen' (marked in red) and go to the next step",
-        "guide_3":"After entering this link, please enter the relevant information (it comes with it by default, but you don't need to enter it), and finally click the upper right corner (marked in red) to complete the addition",
-        "guide_4":"After completing the above process, you can see the bibi entrance (marked in red) on your mobile phone desktop, you can directly click to open BIBI",
-        "one":"One",
-        "two":"Two",
-        "three":"Three",
-        "four":"Four",
-        "download":"Download",
-        "download_remark":"Download BIBI App for more convenient transactions",
-        "mission":"Commission",
-        "recharge_reward":"Recharge rebate",
-        "recharge_trade":"Trading rebate",
-        "rebate":"Rebate",
-        "select_bank":"Select bank",
-        "name":"Name",
-        "card_name":"Bank card number/account",
-        "enter_name":"Enter name",
-        "enter_bank":"Select a bank",
-        "not_found":"Access error",
-        "need_read":"I have read and agree to the ",
-        "protocol":"Privacy Policy",
-        "experience":"Experience Gold",
-        "experience_order":"Experience Gold Order",
-        "select_cs":"Select customer service"
+        "inv_title": "Invitation rebate",
+        "id": "ID",
+        "no_content": "No content yet",
+        "recharge_fait": "Fiat currency recharge",
+        "recharge_protocol": "On-chain recharge",
+        "recharge_amount": "Recharge amount",
+        "type_recharge_amount": "Enter the recharge amount",
+        "recharge_fait_remark": "Reminder:Please contact online customer service after payment",
+        "next": "Next step",
+        "reject": "Rejected",
+        "pay_away": "Payment method",
+        "limit_50": "Minimum deposit amount 50 USDT",
+        "fait_withdraw": "Fiat Withdrawal",
+        "protocol_withdraw": "Withdrawal on the chain",
+        "bank_num": "Bank card number",
+        "use_bank": "Available channels",
+        "enter_bank_num": "Enter the bank card number/account",
+        "min_50": "Minimum 50",
+        "back_home": "Back homepage",
+        "guide_title": "How to quickly access BIBI on iOS",
+        "guide_1": "Open the safari browser, enter '{{value}}' and visit, select the menu at the bottom of the browser (marked in red) and go to the next step",
+        "guide_2": "After the menu pops up, select 'add to home screen' (marked in red) and go to the next step",
+        "guide_3": "After entering this link, please enter the relevant information (it comes with it by default, but you don't need to enter it), and finally click the upper right corner (marked in red) to complete the addition",
+        "guide_4": "After completing the above process, you can see the bibi entrance (marked in red) on your mobile phone desktop, you can directly click to open BIBI",
+        "one": "One",
+        "two": "Two",
+        "three": "Three",
+        "four": "Four",
+        "download": "Download",
+        "download_remark": "Download BIBI App for more convenient transactions",
+        "mission": "Commission",
+        "recharge_reward": "Recharge rebate",
+        "recharge_trade": "Trading rebate",
+        "rebate": "Rebate",
+        "select_bank": "Select bank",
+        "name": "Name",
+        "card_name": "Bank card number/account",
+        "enter_name": "Enter name",
+        "enter_bank": "Select a bank",
+        "not_found": "Access error",
+        "need_read": "I have read and agree to the ",
+        "protocol": "Privacy Policy",
+        "experience": "Experience Gold",
+        "experience_order": "Experience Gold Order",
+        "select_cs": "Select customer service",
+        "reward": "reward",
+        "commission": "commission"
+    },
+    "asx": {
+        "banner_text": "All round one click trading platform",
+        "banner_text_2": "Easily buy and sell, manage your digital assets"
     },
     "message": {
         "regis_success": "Registration is successful, it will be automatically go to login for you",
@@ -316,48 +322,72 @@
         "save_success": "Successfully saved",
         "add_optional": "Add optional successfully",
         "cancel_optional": "Cancel optional success",
-        "upload_success":"Uploaded successfully",
-        "type_trade_amount":"Please enter transaction amount",
-        "type_limit_amount":"Please enter a limit amount",
-        "level":"Level",
-        "total":"total",
-        "enter_amount":"Please enter recharge amount",
-        "enter_bank_num":"Please enter the bank card number/account",
-        "last_balance":"Exceeded maximum balance",
-        "min_10":"Minimum transaction amount 10 USDT",
-        "enter_phone":"Please enter the mobile number",
-        "enter_email_phone":"Please enter email address or mobile number",
-        "agree_protocol":"Please read and agree to the Privacy Policy",
-        "enter_invite":"Please enter the invitation code"
-},
+        "upload_success": "Uploaded successfully",
+        "type_trade_amount": "Please enter transaction amount",
+        "type_limit_amount": "Please enter a limit amount",
+        "level": "Level",
+        "total": "total",
+        "enter_amount": "Please enter recharge amount",
+        "enter_bank_num": "Please enter the bank card number/account",
+        "last_balance": "Exceeded maximum balance",
+        "min_10": "Minimum transaction amount 10 USDT",
+        "enter_phone": "Please enter the mobile number",
+        "enter_email_phone": "Please enter email address or mobile number",
+        "agree_protocol": "Please read and agree to the Privacy Policy",
+        "enter_invite": "Please enter the invitation code"
+    },
     "title": {
         "language_set": "Language"
     },
-    "invite":{
-        "rules":"Rules",
-        "invitation":"Invitation",
-        "share":"Share and get rewarded",
-        "inv_code":"Invitation code",
-        "share_link":"Referral link",
-        "no":"No.",
-        "waiting":"Waiting",
-        "inv_more":"Invite Friends",
-        "save":"Long press the picture to save",
-        "share_to":"Share to",
-        "code":"Invitation code",
-        "enter_code":"Enter the invitation code",
-        "share_1":"Invite friends to earn",
-        "share_2":"money together",
-        "share_3":"Share highest with friends",
-        "share_4":"commission rebates",
-        "recom":"My recommendation",
-        "share_after":"After recharging, you will get:",
-        "commission":"Invitation commission",
-        "share_5":"Every successful recommendation of a friend",
-        "share_6":"Enjoy multi-level commission return",
-        "share_earn":"Earn coins with friends",
-        "copy_code":"Copy Code",
-        "copy_link":"Copy Link",
-        "rank_remark":"Your ranking in the first 24 hours"
+    "invite": {
+        "rules": "Rules",
+        "invitation": "Invitation",
+        "share": "Share and get rewarded",
+        "inv_code": "Invitation code",
+        "share_link": "Referral link",
+        "no": "No.",
+        "waiting": "Waiting",
+        "inv_more": "Invite Friends",
+        "save": "Long press the picture to save",
+        "share_to": "Share to",
+        "code": "Invitation code",
+        "enter_code": "Enter the invitation code",
+        "share_1": "Invite friends to earn",
+        "share_2": "money together",
+        "share_3": "Share highest with friends",
+        "share_4": "commission rebates",
+        "recom": "My recommendation",
+        "share_after": "After recharging, you will get:",
+        "commission": "Invitation commission",
+        "share_5": "BIBI promotion award",
+        "share_6": "Enjoy multi-level commission return",
+        "share_earn": "Earn coins with friends",
+        "copy_code": "Copy Code",
+        "copy_link": "Copy Link",
+        "rank_remark": "Your ranking in the first 24 hours",
+        "share_table_title": "Recharge Successfully",
+        "share_table_title_2": "Trading Commission"
+    },
+    "activity": {
+        "rule_1": "If a user successfully accesses the activity page, it will be deemed as signing up for this activity. Users who do not visit the activity page cannot obtain any rewards.",
+        "rule_2": "It was opened at the beginning of the activity, and the progress of inviting Level 1 members to recharge 100USDT increased by 1%",
+        "rule_3": "You must invite real and effective users. If there are false users, all rewards will be canceled.",
+        "rule_4": "Please contact the official customer service to confirm your personal information and address when receiving cash rewards or in kind rewards.",
+        "rule_5": "All customers can participate in this activity, with the amount of 1 billion USD, and the activity will end when used up.",
+        "team_1": "The user needs to complete identity authentication. Failure to complete identity authentication before the end of the activity will result in failure to receive any rewards.",
+        "team_2": "Users from the following countries or regions are not allowed to participate in this activity: Chinese Mainland, Syria, Iran, Cuba, Venezuela.",
+        "team_3": "Users of this activity are not allowed to register multiple accounts. If they find cheating, they will be disqualified.",
+        "about": "About activity",
+        "rule": "Rule of activity",
+        "team": "Terms and Conditions",
+        "start": "Start at",
+        "progress": "Completion progress",
+        "reward": "Reward",
+        "dear": "Dear user:",
+        "dear_remark": "BIBI will open the invitational competition soon.Join now and receive rewards.",
+        "dear_remark_2": "Participate in BIBI invitational competition and share 20000000 USDT rewards.",
+        "expand":"Expand more",
+        "exchange":"BIBI exchange",
+        "get":"Congratulations on getting"
     }
 }
