--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -281,7 +281,9 @@
         "protocol":"Политика конфиденциальности",
         "experience":"Золотой опыт",
         "experience_order":"Опыт Золотого Ордена",
-        "select_cs":"Выберите обслуживание клиентов"
+        "select_cs":"Выберите обслуживание клиентов",
+        "reward":"награда",
+        "commission":"комиссия"
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
@@ -345,6 +347,21 @@
         "save":"Нажмите и удерживайте, чтобы сохранить",
         "share_to":"Поделиться с",
         "code":"Код приглашения",
-        "enter_code":"Введите код приглашения"
+        "enter_code":"Введите код приглашения",
+        "share_1":"приглашай друзей зарабатывать",
+        "share_2":"деньги вместе",
+        "share_3":"Поделитесь макс. с друзьями",
+        "share_4":"Скидка на комиссию",
+        "recom":"Мой совет",
+        "share_after":"После перезарядки вы получаете:",
+        "commission":"пригласительная комиссия",
+        "share_5":"Награда за продвижение БИБИ",
+        "share_6":"Наслаждайтесь многоуровневыми комиссионными вознаграждениями.",
+        "share_earn":"зарабатывать монеты с друзьями",
+        "copy_code":"скопировать код",
+        "copy_link":"копировать ссылку",
+        "rank_remark":"Ваш рейтинг в первые 24 часа",
+        "share_table_title":"Успешная перезарядка",
+        "share_table_title_2":"Торговая комиссия"
     }
 }
