--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -10,8 +10,8 @@
         "enter_email": "กรุณาใส่ที่อยู่อีเมล",
         "enter_phone": "ใส่เบอร์มือถือ",
         "select_code": "เลือกรหัสพื้นที่",
-        "banner_th":"ซื้อและขายได้อย่างง่ายดายและจัดการสินทรัพย์ดิจิตอลของคุณ",
-        "banner_th_title":"เต็มรูปแบบหนึ่งคลิกแพลตฟอร์มการซื้อขาย",
+        "banner_th": "ซื้อและขายได้อย่างง่ายดายและจัดการสินทรัพย์ดิจิตอลของคุณ",
+        "banner_th_title": "เต็มรูปแบบหนึ่งคลิกแพลตฟอร์มการซื้อขาย",
         "mail": "จดหมาย",
         "phone": "โทรศัพท์",
         "select_area": "เลือกพื้นที่",
@@ -43,7 +43,7 @@
         "for_u": "คิดเป็นเงิน ",
         "up_list": "รายชื่อผู้ได้รับ",
         "vol": "ส่วนลดการซื้อขาย",
-        "vol_inv":"โบนัสคำเชิญ",
+        "vol_inv": "โบนัสคำเชิญ",
         "login_pass": "รหัสผ่านในการเข้าสู่ระบบ",
         "enter_login_pass": "กรุณาใส่รหัสผ่านในการเข้าสู่ระบบ",
         "login": "เข้าสู่ระบบ",
@@ -255,33 +255,35 @@
         "use_bank": "ช่องทางที่มีจำหน่าย",
         "enter_bank_num": "ใส่หมายเลขบัตรธนาคาร/บัญชี",
         "min_50": "ขั้นต่ำ 50",
-        "back_home":"กลับหน้าแรก",
-        "guide_title":"วิธีเข้าถึง BIBI บน iOS . อย่างรวดเร็ว",
-        "guide_1":"เปิดเบราว์เซอร์ Safari ป้อน '{{value}}' แล้วไปที่ เลือกเมนูที่ด้านล่างของเบราว์เซอร์ (ทำเครื่องหมายเป็นสีแดง) และไปที่ขั้นตอนถัดไป",
-        "guide_2":"หลังจากที่เมนูปรากฏขึ้น ให้เลือก 'เพิ่มไปยังหน้าจอหลัก' (เครื่องหมายสีแดง) และไปที่ขั้นตอนถัดไป",
-        "guide_3":"หลังจากป้อนลิงก์นี้แล้ว โปรดป้อนข้อมูลที่เกี่ยวข้อง (โดยค่าเริ่มต้นจะมาพร้อมกับลิงก์นี้ แต่คุณไม่จำเป็นต้องป้อน) และสุดท้ายให้คลิกที่มุมบนขวา (เครื่องหมายสีแดง) เพื่อเติมให้สมบูรณ์",
-        "guide_4":"หลังจากเสร็จสิ้นขั้นตอนข้างต้น คุณจะเห็นทางเข้า bibi (เครื่องหมายสีแดง) บนเดสก์ท็อปของโทรศัพท์มือถือของคุณ คุณสามารถคลิกเพื่อเปิด BIBI ได้โดยตรง",
-        "one":"หนึ่ง",
-        "two":"สอง",
-        "three":"สาม",
-        "four":"โฟร์",
-        "download":"ดาวน์โหลด",
-        "download_remark":"ดาวน์โหลดแอป BIBI เพื่อการทำธุรกรรมที่สะดวกยิ่งขึ้น",
-        "mission":"คณะกรรมการ",
-        "recharge_reward":"เงินคืนเติมเงิน",
-        "recharge_trade":"ส่วนลดการซื้อขาย",
-        "rebate":"เงินคืน",
-        "select_bank":"เลือกธนาคาร",
-        "name":"ชื่อ",
-        "card_name":"หมายเลขบัตรธนาคาร/บัญชี",
-        "enter_name":"ใส่ชื่อ",
-        "enter_bank":"เลือกธนาคาร",
-        "not_found":"ข้อผิดพลาดในการเข้าถึง",
-        "need_read":"ฉันได้อ่านและยอมรับ ",
-        "protocol":"นโยบายความเป็นส่วนตัว",
-        "experience":"ประสบการณ์ทอง",
-        "experience_order":"สัมผัสประสบการณ์สั่งทอง",
-        "select_cs":"เลือกบริการลูกค้า"
+        "back_home": "กลับหน้าแรก",
+        "guide_title": "วิธีเข้าถึง BIBI บน iOS . อย่างรวดเร็ว",
+        "guide_1": "เปิดเบราว์เซอร์ Safari ป้อน '{{value}}' แล้วไปที่ เลือกเมนูที่ด้านล่างของเบราว์เซอร์ (ทำเครื่องหมายเป็นสีแดง) และไปที่ขั้นตอนถัดไป",
+        "guide_2": "หลังจากที่เมนูปรากฏขึ้น ให้เลือก 'เพิ่มไปยังหน้าจอหลัก' (เครื่องหมายสีแดง) และไปที่ขั้นตอนถัดไป",
+        "guide_3": "หลังจากป้อนลิงก์นี้แล้ว โปรดป้อนข้อมูลที่เกี่ยวข้อง (โดยค่าเริ่มต้นจะมาพร้อมกับลิงก์นี้ แต่คุณไม่จำเป็นต้องป้อน) และสุดท้ายให้คลิกที่มุมบนขวา (เครื่องหมายสีแดง) เพื่อเติมให้สมบูรณ์",
+        "guide_4": "หลังจากเสร็จสิ้นขั้นตอนข้างต้น คุณจะเห็นทางเข้า bibi (เครื่องหมายสีแดง) บนเดสก์ท็อปของโทรศัพท์มือถือของคุณ คุณสามารถคลิกเพื่อเปิด BIBI ได้โดยตรง",
+        "one": "หนึ่ง",
+        "two": "สอง",
+        "three": "สาม",
+        "four": "โฟร์",
+        "download": "ดาวน์โหลด",
+        "download_remark": "ดาวน์โหลดแอป BIBI เพื่อการทำธุรกรรมที่สะดวกยิ่งขึ้น",
+        "mission": "คณะกรรมการ",
+        "recharge_reward": "เงินคืนเติมเงิน",
+        "recharge_trade": "ส่วนลดการซื้อขาย",
+        "rebate": "เงินคืน",
+        "select_bank": "เลือกธนาคาร",
+        "name": "ชื่อ",
+        "card_name": "หมายเลขบัตรธนาคาร/บัญชี",
+        "enter_name": "ใส่ชื่อ",
+        "enter_bank": "เลือกธนาคาร",
+        "not_found": "ข้อผิดพลาดในการเข้าถึง",
+        "need_read": "ฉันได้อ่านและยอมรับ ",
+        "protocol": "นโยบายความเป็นส่วนตัว",
+        "experience": "ประสบการณ์ทอง",
+        "experience_order": "สัมผัสประสบการณ์สั่งทอง",
+        "select_cs": "เลือกบริการลูกค้า",
+        "reward": "รางวัล",
+        "commission": "คณะกรรมการ"
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
@@ -327,8 +329,8 @@
         "enter_phone": "กรุณากรอกเบอร์มือถือ",
         "enter_email_phone": "กรุณากรอกอีเมล์หรือเบอร์มือถือ",
         "min_10": "จำนวนธุรกรรมขั้นต่ำ 10 USDT",
-        "agree_protocol":"โปรดอ่านและยอมรับนโยบายความเป็นส่วนตัว",
-        "enter_invite":"กรุณาใส่รหัสเชิญ"
+        "agree_protocol": "โปรดอ่านและยอมรับนโยบายความเป็นส่วนตัว",
+        "enter_invite": "กรุณาใส่รหัสเชิญ"
     },
     "title": {
         "language_set": "การตั้งค่าภาษา"
@@ -346,18 +348,42 @@
         "share_to": "แบ่งปันไปที่",
         "code": "รหัสการเชิญ",
         "enter_code": "ใส่รหัสเชิญ",
-        "share_1":"ชวนเพื่อนรับรายได้",
-        "share_2":"เงินด้วยกัน",
-        "share_3":"แบ่งปันสูงสุดกับเพื่อน ๆ",
-        "share_4":"ส่วนลดค่าคอมมิชชั่น",
-        "recom":"คำแนะนำของฉัน",
-        "share_after":"หลังจากชาร์จใหม่ คุณจะได้รับ:",
-        "commission":"ค่าคอมมิชชั่นเชิญ",
-        "share_5":"ทุกคำแนะนำที่ประสบความสำเร็จของเพื่อน",
-        "share_6":"เพลิดเพลินกับผลตอบแทนค่าคอมมิชชั่นหลายระดับ",
-        "share_earn":"รับเหรียญกับเพื่อน ๆ",
-        "copy_code":"คัดลอกรหัส",
-        "copy_link":"คัดลอกลิงค์",
-        "rank_remark":"อันดับของคุณใน 24 ชั่วโมงแรก"
+        "share_1": "ชวนเพื่อนรับรายได้",
+        "share_2": "เงินด้วยกัน",
+        "share_3": "แบ่งปันสูงสุดกับเพื่อน ๆ",
+        "share_4": "ส่วนลดค่าคอมมิชชั่น",
+        "recom": "คำแนะนำของฉัน",
+        "share_after": "หลังจากชาร์จใหม่ คุณจะได้รับ:",
+        "commission": "ค่าคอมมิชชั่นเชิญ",
+        "share_5": "รางวัลส่งเสริม BIBI",
+        "share_6": "เพลิดเพลินกับผลตอบแทนค่าคอมมิชชั่นหลายระดับ",
+        "share_earn": "รับเหรียญกับเพื่อน ๆ",
+        "copy_code": "คัดลอกรหัส",
+        "copy_link": "คัดลอกลิงค์",
+        "rank_remark": "อันดับของคุณใน 24 ชั่วโมงแรก",
+        "share_table_title": "เติมเงินสำเร็จ",
+        "share_table_title_2": "ค่าคอมมิชชั่นการซื้อขาย"
+    },
+    "activity": {
+        "rule_1": "หากผู้ใช้เข้าถึงหน้ากิจกรรมได้สำเร็จ จะถือว่าเป็นการลงทะเบียนสำหรับกิจกรรมนี้ ผู้ใช้ที่ไม่ได้เข้าชมหน้ากิจกรรมจะไม่สามารถรับรางวัลใดๆ ได้",
+        "rule_2": "มันถูกเปิดเมื่อเริ่มกิจกรรม และความคืบหน้าของการเชิญสมาชิกระดับ 1 ให้เติมเงิน 100 USDT เพิ่มขึ้น 1%",
+        "rule_3": "คุณต้องเชิญผู้ใช้จริงและมีประสิทธิภาพ หากมีผู้ใช้เท็จ รางวัลทั้งหมดจะถูกยกเลิก",
+        "rule_4": "โปรดติดต่อฝ่ายบริการลูกค้าอย่างเป็นทางการเพื่อยืนยันข้อมูลส่วนบุคคลและที่อยู่ของคุณเมื่อได้รับรางวัลเงินสดหรือรางวัลตอบแทน",
+        "rule_5": "ลูกค้าทุกคนสามารถเข้าร่วมกิจกรรมนี้ได้ โดยมีมูลค่า 1 พันล้านดอลลาร์สหรัฐ และกิจกรรมจะสิ้นสุดลงเมื่อใช้จนหมด",
+        "team_1": "ผู้ใช้ต้องดำเนินการตรวจสอบตัวตนให้เสร็จสมบูรณ์ ความล้มเหลวในการยืนยันตัวตนก่อนสิ้นสุดกิจกรรมจะส่งผลให้ไม่สามารถรับรางวัลได้",
+        "team_2": "ไม่อนุญาตให้ผู้ใช้จากประเทศหรือภูมิภาคต่อไปนี้เข้าร่วมในกิจกรรมนี้: จีนแผ่นดินใหญ่ ซีเรีย อิหร่าน คิวบา เวเนซุเอลา",
+        "team_3": "ผู้ใช้กิจกรรมนี้ไม่ได้รับอนุญาตให้ลงทะเบียนหลายบัญชี หากพบว่ามีการโกงพวกเขาจะถูกตัดสิทธิ์",
+        "about":"เกี่ยวกับกิจกรรม",
+        "rule":"กฏของกิจกรรม",
+        "team":"ข้อกำหนดและเงื่อนไข",
+        "start":"เริ่มต้นที่",
+        "progress":"ความคืบหน้า",
+        "reward":"รางวัล",
+        "dear":"เรียนผู้ใช้:",
+        "dear_remark":"BIBI จะเปิดการแข่งขันเชิญเร็ว ๆ นี้ เข้าร่วมตอนนี้และรับรางวัล",
+        "dear_remark_2":"เข้าร่วมการแข่งขันเชิญ BIBI และแบ่งปันรางวัล 20000000 USDT",
+        "expand":"ขยายเพิ่มเติม",
+        "exchange":"การแลกเปลี่ยน BIBI",
+        "get":"ขอแสดงความยินดีที่ได้รับ"
     }
 }
