--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -59,9 +59,9 @@
         "confirm": "Confirm",
         "assets_pass": "FND PW",
         "assets_manage": "Assets",
-        "level_one": "Level-one",
-        "level_two": "Level-two",
-        "level_three": "Level-three",
+        "level_one": "Level 1",
+        "level_two": "Level 2",
+        "level_three": "Level 3",
         "inv_total": "Level All",
         "percent_one": "First generation:60%",
         "percent_two": "Second Generation:30%",
